<resources>
    <string name="app_name">Skytag Beta</string>
    <string name="btn_start_location">Transmitir</string>
    <string name="btn_stop_location">Detener</string>
    <string name="btn_connect_ble">Conectar</string>
    <string name="btn_refresh">Refrescar</string>
    <string name="btn_logout">Salir</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login_log">Login</string>
    <string name="login_copi_identifier">Copy ID</string>
    <string name="image_login">image login</string>
    <string name="location_required_error">GPS Active</string>
    <string name="remember_me">Remember me</string>
    <string name="required_field">Campo requerído</string>
    <string name="btn_delete_all">Borrar</string>
    <string name="edit_title">Settings</string>
    <string name="edit_exit">Logout</string>
    <string name="menu_record">Record</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_history">Location History</string>
    <string name="location_history_delete">Delete</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="location_history_start_date">Start Date</string>
    <string name="location_history_finish_date">Finish Date</string>
    <string name="loginactivity_login_error">Wrong username or password</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="loginactivity_permissions_toas">You must accept the permissions</string>
    <string name="loginactivity_all_permission_be_required">Be require all permissions</string>
    <string name="helper_required">Required</string>
    <string name="edit_store_message_valid">" Review the required fields."</string>
</resources>