<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:id="@+id/btnTop"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAddBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect_ble"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cornerRadius="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_paddin_size"
            android:text="@string/btn_refresh"
            app:cornerRadius="@dimen/common_padding_default"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/btn_logout"
            android:src="@drawable/ic_logout"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/btnTop"
        app:layout_constraintBottom_toTopOf="@id/btnBottom"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_status_list"
        android:layout_height="0dp"/>




    <LinearLayout
        android:id="@+id/btnBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop_location"
            app:cornerRadius="@dimen/common_padding_default"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_location"
            app:cornerRadius="@dimen/common_padding_default"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/min_paddin_size"
            android:backgroundTint="@color/green" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>