<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/min_paddin_size"
    android:background="@color/grey"
    tools:context=".presentation.login.LoginActivity">


    <ImageView
        android:id="@+id/img_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_login"
        android:contentDescription="@string/image_login" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/img_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/login_user"
        app:helperText="Requerido"
        app:endIconMode="clear_text"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="20"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tilUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/login_password"
        app:helperText="Campo Requerido"
        app:endIconMode="password_toggle"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="16dp"
        android:textSize="18sp"
        android:text="@string/login_log"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvIdentificador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_copi_identifier"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"/>


</androidx.constraintlayout.widget.ConstraintLayout>